<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>robotica_movel</name>
  <version>0.0.0</version>
  <description>Material para uso em disciplina.</description>

  <maintainer email="victor.matos@fieb.org.br">Victor Matos</maintainer>
  <author email="victor.matos@fieb.org.br">Victor Matos</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
